<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多功能远程测试仪</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎使用多功能远程测试仪</string>
    <string name="met">甲烷浓度显示</string>
    <string name="co">CO浓度显示</string>
    <string name="tem">温度显示</string>
    <string name="hum">湿度显示</string>
    <string name="all">所有测试显示</string>
    <string name="test">这是屏幕测试效果</string>
    <string name="setting">设          置</string>
    <string name="exit">退          出</string>
    <string name="about">关于我们</string>
    <string name="ip">服务端IP</string>
    <string name="port">端口号</string>
    <string name="reset">重置</string>
    <string name="save">保存</string>
    <string name="pip">请输入服务器地址</string>
    <string name="pport">请输入服务器端口号</string>
    <string name="title_activity_about">关于我们</string>
    <string name="setname">程序设置</string>
    <string name="pro">多功能远程测试仪 V1.1</string>
    <string name="au">作者：汪富乐</string>
    <string name="team">参赛队伍：Algebra</string>
    
</resources>
